# oeis_validator

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
data/: A000005.txt  A000010.txt  A000040.txt  A000041.txt  A000045.txt  A000108.txt  A000203.txt  A000217.txt  A000290.txt  A001222.txt
src/oeis_validator/: __init__.py  __main__.py  demo.py  models.py  parser.py  reporter.py  rules.py
tests/: test_adversarial.py  test_cli.py  test_coverage.py  test_data_files.py  test_models.py  test_parser.py  test_reporter.py  test_rules.py
