[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oeis_validator"
version = "0.1.1"
description = "Validate OEIS draft entries against the internal format specification and style sheet"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Dar\u00edo Clavijo", email = "clavijodario@gmail.com"}
]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "hatch",
    "pip-api",
]
test = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "hypothesis",
]
lint = [
    "prospector[with_ruff,with_mypy]",
    "semgrep",
    "vulture",
]

[project.scripts]
oeis-validator = "oeis_validator.__main__:main"

[project.urls]
Homepage = "https://github.com/daedalus/oeis_validator"
Repository = "https://github.com/daedalus/oeis_validator"
Issues = "https://github.com/daedalus/oeis_validator/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/oeis_validator"]

[tool.hatch.build.targets.sdist]
include = ["src/oeis_validator"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "TCH", "N", "C4", "ARG"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.prospector]
output-format = "text"
strictness = "medium"
test-warnings = false

[tool.prospector.tools]
ruff = true
mypy = true
pylint = true
pyflakes = false
pycodestyle = false
mccabe = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=src --cov-fail-under=80"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
omit = ["tests/*", "*/__init__.py"]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
